# Godot-WinMousePassthrough

./: .gitattributes  .gitignore  LICENSE  README.md  project.godot
.github/workflows/: build.yml  release.yml
addons/windows_mouse_passthrough/: README.md  plugin.cfg  plugin.gd  windows_mouse_passthrough.gdextension
example/: example.gd  example.tscn
gdextension/: CMakeLists.txt
gdextension/src/: mouse_passthrough.cpp  mouse_passthrough.h  register_types.cpp  register_types.h  win32_passthrough.cpp  win32_passthrough.h
